2/23 whitespace fix

--- a/styles/accordion.css
+++ b/styles/accordion.css
@@ -1,4 +1,13 @@
 body {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	vertical-align: baseline;
+}
+
+
+
+body {
   background-color: #DEE2E2;
 }
 
